WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157377
[iOS] Media information is sometimes not shown in Control Center
https://bugs.webkit.org/show_bug.cgi?id=157377
Summary
[iOS] Media information is sometimes not shown in Control Center
Eric Carlson
Reported
2016-05-05 09:55:31 PDT
Media information is sometimes not shown in Control Center
Attachments
Proposed patch.
(4.43 KB, patch)
2016-05-05 09:58 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-05-05 09:58:15 PDT
Created
attachment 278171
[details]
Proposed patch.
WebKit Commit Bot
Comment 2
2016-05-05 11:51:11 PDT
Comment on
attachment 278171
[details]
Proposed patch. Clearing flags on attachment: 278171 Committed
r200466
: <
http://trac.webkit.org/changeset/200466
>
WebKit Commit Bot
Comment 3
2016-05-05 11:51:16 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 4
2016-05-06 03:23:18 PDT
Is this a regression from
r199351
for
Bug 156243
?
Bug 156243
: [iOS] media title sometimes remain in Control Center after tab is closed <
https://bugs.webkit.org/show_bug.cgi?id=156243
> <
http://trac.webkit.org/changeset/199351
>
Radar WebKit Bug Importer
Comment 5
2016-05-06 03:25:55 PDT
<
rdar://problem/26137383
>
Eric Carlson
Comment 6
2016-05-06 09:30:40 PDT
(In reply to
comment #4
)
> Is this a regression from
r199351
for
Bug 156243
? > >
Bug 156243
: [iOS] media title sometimes remain in Control Center after tab > is closed > <
https://bugs.webkit.org/show_bug.cgi?id=156243
> > <
http://trac.webkit.org/changeset/199351
>
It isn't a regression, I didn't completely fix the problem in
r199351
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug