[iOS] Media information is sometimes not shown in Control Center https://bugs.webkit.org/show_bug.cgi?id=157377

Reviewed by Jer Noble.

* platform/audio/ios/MediaSessionManagerIOS.h:
* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::updateNowPlayingInfo): Store values passed to MPNowPlayingInfoCenter
  individually instead of in a dictionary.


Canonical link: https://commits.webkit.org/175498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200466 268f45cc-cd09-0410-ab3c-d52691b4dbfc